--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,11 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400;500;700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="page-wrapper">
     <header>
@@ -20,49 +23,56 @@
     <div class="main-footer-wrapper">
       <main>
         <div class="container">
-          <div class="row logo-banner">
-            <div class="header-container">
-              <div class="column-half logo">
-                <h2>dinner <b>decided</b></h2>
-              </div>
-              <div class="column-half menu-column">
-                <div class="menu-bar">
-                  <a class="header-items featured-link" href="">Featured</a>
-                  <a class="header-items favorite-link" href="">Favorites</a>
-                  <input class="header-items" id="search" type="text" placeholder="search by main ingredient">
-                  <button class="header-items search-button">Search</button>
+          <div class="green-heading">
+            <div class="row logo-banner">
+              <div class="header-container">
+                <div class="column-half logo">
+                  <h2>dinner <b>decided</b></h2>
+                </div>
+                <div class="column-half menu-column">
+                  <div class="menu-bar">
+                    <a class="header-items featured-link" href="">Featured</a>
+                    <a class="header-items favorite-link" href="">Favorites</a>
+                    <input class="header-items" id="search" type="text" placeholder="search by main ingredient">
+                    <button class="header-items search-button">Search</button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="column-full">
-              <h1>Recipe of The Day</h1>
-            </div>
-          </div>
-          <div class="row">
-            <div class="column-half meal-column-section img-container">
-              <img class="recipe-img" src="https://cdn-icons-png.flaticon.com/512/4671/4671171.png"
-                alt="image placeholder">
-              <h4 class="meal-name">Meal Name</h4>
-            </div>
-            <div class="column-half meal-column-section">
-              <div class="recipe-container">
-                <div class="toggler">
-                  <button class="recipe-button active">Ingredients</button>
-                  <button class="recipe-button">About</button>
+          <div class="content-wrapper">
+            <div class="home-page">
+              <div class="row">
+                <div class="column-full">
+                  <h1>Recipe of The Day</h1>
                 </div>
-                <textarea class="ingredients-textarea" readonly></textarea>
-                <div class="about-container" style="display: none;">
-                  <p id="about-link"></p>
-                </div>
-                <p class="about-link"></p>
               </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="column-full favorite-button">
-              <button class="add-favorite">Add recipe to favorites</button>
+              <div class="recipe-details">
+                <div class="row">
+                  <div class="column-half meal-column-section img-container">
+                    <img class="recipe-img" src="https://cdn-icons-png.flaticon.com/512/4671/4671171.png"
+                      alt="image placeholder">
+                    <h4 class="meal-name">Meal Name</h4>
+                  </div>
+                  <div class="column-half meal-column-section">
+                    <div class="recipe-container">
+                      <div class="toggler">
+                        <button class="recipe-button active">Ingredients</button>
+                        <button class="recipe-button">About</button>
+                      </div>
+                      <textarea class="ingredients-textarea" readonly></textarea>
+                      <div class="about-container" style="display: none;">
+                        <p id="about-link"></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="column-full favorite-button">
+                  <button class="add-favorite">Add recipe to favorites</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -75,7 +85,7 @@
             Featured
           </a>
           <a class="footer-links" href="">
-            <img class="footer-symbol" src="https://cdn-icons-png.flaticon.com/512/2902/2902475.png"
+            <img class="footer-symbol favorite-link" src="https://cdn-icons-png.flaticon.com/512/2902/2902475.png"
               alt="star symbol for favorites">
             Favorites
           </a>
@@ -90,4 +100,5 @@
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
