search page populates when the user clicks the search icon

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               alt="star symbol for favorites">
             Favorites
           </a>
-          <button class="footer-links">
+          <button class="footer-links search-icon">
             <img class="footer-symbol" src="https://cdn-icons-png.flaticon.com/512/3106/3106797.png">
             Search
           </button>
