--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJAX Project</title>
+  <title>Dinner Decided</title>
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="layout.css">
@@ -15,7 +14,6 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap" rel="stylesheet">
 </head>
-
 <body>
   <div class="page-wrapper">
     <header>
@@ -33,7 +31,7 @@
                   <div class="menu-bar">
                     <a class="header-items featured-link" href="">Featured</a>
                     <a class="header-items favorite-link" href="">Favorites</a>
-                    <input class="header-items" id="search" type="text" placeholder="search by main ingredient">
+                    <input class="header-items" id="search" type="text" placeholder="search any ingredients!">
                     <button class="header-items search-button">Search</button>
                   </div>
                 </div>
@@ -100,5 +98,4 @@
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
-
 </html>
