--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="page-wrapper">
     <header>
     </header>
-    <div class="main-footer-wrapper">
+    <div class="main-header-wrapper">
       <main>
         <div class="container">
           <div class="green-heading">
@@ -81,7 +81,7 @@
                 alt="featured meal image of fork and knife">
               Featured
             </a>
-            <a class="footer-links" href="">
+            <a class="footer-links favorites-icon" href="">
               <img class="footer-symbol favorite-link" src="https://cdn-icons-png.flaticon.com/512/2902/2902475.png"
                 alt="star symbol for favorites">
               Favorites
