more code clean up html and js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="column-half menu-column">
                   <div class="menu-bar">
                     <a class="header-items featured-link" href="">Featured</a>
-                    <a class="header-items favorite-link" href="">Favorites</a>
+                    <a class="header-items favorite-link">Favorites</a>
                     <input class="header-items" id="search" type="text" placeholder="search any ingredients!">
                     <button class="header-items search-button">Search</button>
                   </div>
@@ -95,7 +95,6 @@
       </main>
     </div>
   </div>
-  <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
