added images and meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Dinner Decided">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://wang-morris.github.io/dinner-decided/images/dinner-for-two.jpg">
+  <meta property="og:url" content="https://wang-morris.github.io/dinner-decided/">
+  <meta name="twitter:card" content="summary_large_image">
   <title>Dinner Decided</title>
   <link rel="icon" href="images/favicon.ico">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="layout.css">
   <link rel="stylesheet" href="styles.css">
