meta tag change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Dinner Decided">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://wang-morris.github.io/dinner-decided/images/dinner-for-two.jpg">
+  <meta property="og:image" content="https://wang-morris.github.io/dinner-decided/images/dinner-for-two.jpeg">
   <meta property="og:description" content="A web application for home cooks who want to explore food recipes.">
   <meta property="og:url" content="https://wang-morris.github.io/dinner-decided/">
   <meta name="twitter:card" content="summary_large_image">
