UI additions and refactored CSS files

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <div class="column-half meal-column-section img-container">
                     <img class="recipe-img" src="https://cdn-icons-png.flaticon.com/512/4671/4671171.png"
                       alt="image placeholder">
-                    <h4 class="meal-name">Meal Name</h4>
+                    <h4 class="meal-name"></h4>
                   </div>
                   <div class="column-half meal-column-section">
                     <div class="recipe-container">
